More robust reflow on zsh with semantic prompts

Improve the logic for avoiding doing reflow of zsh prompts (zsh will
repaint the prompt and command line) when there are semantic prompt
markers (OSC 133).

BUG: 447830