src/characters/Character.h
@@ -29,6 +29,7 @@ const int LINE_WRAPPED              = (1 << 0);
 const int LINE_DOUBLEWIDTH          = (1 << 1);
 const int LINE_DOUBLEHEIGHT_TOP     = (1 << 2);
 const int LINE_DOUBLEHEIGHT_BOTTOM  = (1 << 3);
+const int LINE_PROMPT_START         = (1 << 4);
 
 const RenditionFlags DEFAULT_RENDITION  = 0;
 const RenditionFlags RE_BOLD            = (1 << 0);
